--- a/public/404.html
+++ b/public/404.html
@@ -56,7 +56,7 @@
             <br />
                 <div class="col-lg-6  col-lg-offset-3">
 		  <div class="btn-group btn-group-justified">
-		      <a href="/pages" class="btn btn-primary">ProBooks Home</a>
+		      <a href="/pages" class="btn btn-primary">Agoogoo Home</a>
 		  </div>
 
                 </div>
